--- a/package.json
+++ b/package.json
@@ -1,60 +1,48 @@
 {
-  "name": "my-portfolio",
+  "name": "portfolio",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": " ng serve",
-    "build": " ng build",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.0",
-    "@angular/cdk": "12.2.0",
-    "@angular/common": "12.2.0",
-    "@angular/compiler": "12.2.0",
-    "@angular/core": "12.2.0",
-    "@angular/forms": "12.2.0",
-    "@angular/platform-browser": "12.2.0",
-    "@angular/platform-browser-dynamic": "12.2.0",
-    "@angular/router": "12.2.0",
-    "@nebular/security": "8.0.0",
-    "@ngrx/component-store": "12.5.1",
-    "@ngx-translate/core": "12.1.2",
-    "@ngx-translate/http-loader": "4.0.0",
-    "angular-ng-autocomplete": "2.0.7",
-    "bootstrap": "^5.3.3",
-    "core-decorators": "0.19.0",
-    "core-js": "3.1.3",
-    "moment": "2.29.3",
-    "rxjs": "6.5.4",
-    "serializr": "2.0.5",
-    "sortablejs": "1.8.2",
-    "tslib": "2.3.0",
-    "zone.js": "0.10.2"
+    "@abacritt/angularx-social-login": "^1.3.2",
+    "@angular/animations": "^15.1.0",
+    "@angular/cdk": "^15.1.4",
+    "@angular/common": "^15.1.0",
+    "@angular/compiler": "^15.1.0",
+    "@angular/core": "^15.1.0",
+    "@angular/forms": "^15.1.0",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.1.0",
+    "@angular/platform-browser-dynamic": "^15.1.0",
+    "@angular/router": "^15.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "8.4.1",
-    "@angular-devkit/build-angular": "0.801.0",
-    "@angular/cli": "12.2.18",
-    "@angular/compiler-cli": "12.2.0",
-    "@angular/language-service": "8.1.0",
-    "@types/lodash": "4.14.121",
-    "@types/node": "12.11.1",
-    "@types/superagent": "^8.1.3",
-    "@typescript-eslint/eslint-plugin": "5.25.0",
-    "@typescript-eslint/parser": "5.25.0",
-    "codelyzer": "5.1.2",
-    "css-loader": "5.2.7",
-    "eslint": "8.15.0",
-    "mini-css-extract-plugin": "^1.6.2",
-    "style-loader": "2.0.0",
-    "ts-node": "8.3.0",
-    "typescript": "4.2.3",
-    "uglifyjs-webpack-plugin": "2.2.0"
-  },
-  "prettier": {
-    "singleQuote": true
+    "@angular-devkit/build-angular": "^15.1.5",
+    "@angular/cli": "~15.1.5",
+    "@angular/compiler-cli": "^15.1.0",
+    "@angular/localize": "^15.1.0",
+    "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.4"
   }
 }
